tests/NormalTests/paczka1/fuzzy1/50114134.err
Error in line 1: S92 S92 1,0
Error in line 7: SJIVR A107 241,1
Error in line 14: SJIVR A869 91,6
Error in line 31: qtaR2MEsi5v S123 110,2
